<resources>
    <string name="app_name">Eletrci_Car_APP</string>
    <string name="preco">Preço</string>
    <string name="title">Carro Eletrico</string>
    <string name="carros">Carros</string>
    <string name="favoritos">Favoritos</string>
    <string name="valorCarro">R$120.000,00</string>
    <string name="bateria">Bateria</string>
    <string name="valorbateria">93,4 KWH</string>
    <string name="potencia">Potencia</string>
    <string name="valor_potencia">646 CV</string>
    <string name="recarga">Recarga</string>
    <string name="tempo_recarga">50min</string>
    <string name="preco_kwh">Preço Kwh</string>
    <string name="km_percorrigo">Km Percorrigo</string>
    <string name="calcular">Calcular</string>
    <string name="novaTela">Nova Tela</string>
</resources>