<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/nomeapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/tab_carros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textStyle="bold"
        android:text="@string/carros"
        app:layout_constraintTop_toBottomOf="@id/nomeapp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tab_favoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:text="@string/favoritos"
        app:layout_constraintStart_toEndOf="@id/tab_carros"
        app:layout_constraintTop_toTopOf="@id/tab_carros"/>


    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/carros"
        android:layout_width="329dp"
        android:layout_height="104dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/eletric_car"
        app:layout_constraintLeft_toLeftOf="@id/nomeapp"
        app:layout_constraintTop_toBottomOf="@id/tab_carros" />

    <TextView
        android:id="@+id/preco"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/preco"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/imageView"/>

    <TextView
        android:id="@+id/total_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:text="@string/valorCarro"
        app:layout_constraintStart_toEndOf="@id/preco"
        app:layout_constraintTop_toTopOf="@id/preco"/>

    <TextView
        android:id="@+id/bateria"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/bateria"
        app:layout_constraintStart_toStartOf="@id/preco"
        app:layout_constraintTop_toBottomOf="@id/preco"/>

    <TextView
        android:id="@+id/total_bateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:text="@string/valorbateria"
        app:layout_constraintStart_toEndOf="@id/bateria"
        app:layout_constraintTop_toTopOf="@id/bateria"/>

    <TextView
        android:id="@+id/potencia"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/potencia"
        app:layout_constraintStart_toStartOf="@id/bateria"
        app:layout_constraintTop_toBottomOf="@id/bateria"/>

    <TextView
        android:id="@+id/total_potencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:text="@string/valor_potencia"
        app:layout_constraintStart_toEndOf="@id/potencia"
        app:layout_constraintTop_toTopOf="@id/potencia"/>

    <TextView
        android:id="@+id/recarga"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/recarga"
        app:layout_constraintStart_toStartOf="@id/potencia"
        app:layout_constraintTop_toBottomOf="@id/potencia"/>

    <TextView
        android:id="@+id/tempo_recarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:text="@string/tempo_recarga"
        app:layout_constraintStart_toEndOf="@id/recarga"
        app:layout_constraintTop_toTopOf="@id/recarga"/>

</androidx.constraintlayout.widget.ConstraintLayout>